fix for docker compose
