# webapi/docs/swagger.json
@@ -28,7 +28,35 @@
                 }
             }
         },
-        "/chat": {
+        "/character": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "get character with id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "character id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/character/create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -37,32 +65,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chat"
+                    "Character"
                 ],
-                "summary": "create chat",
+                "summary": "register user",
                 "parameters": [
                     {
-                        "description": "chat params",
-                        "name": "chat",
+                        "description": "character",
+                        "name": "character",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AddChat"
+                            "$ref": "#/definitions/models.AddCharacter"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "created chat",
-                        "schema": {
-                            "$ref": "#/definitions/models.Chat"
-                        }
+                        "description": "OK"
                     }
                 }
             }
         },
-        "/chat/{id}": {
-            "get": {
+        "/character/delete": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -70,28 +95,27 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chat"
+                    "Character"
                 ],
-                "summary": "upgrade request to ws",
+                "summary": "register user",
                 "parameters": [
                     {
-                        "description": "ws struct",
-                        "name": "struct",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/models.WsMessage"
-                        }
+                        "type": "integer",
+                        "description": "character id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
-                    "101": {
-                        "description": ""
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
         },
-        "/chats": {
-            "get": {
+        "/character/update": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -99,18 +123,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chat"
+                    "Character"
                 ],
-                "summary": "Get all chats",
+                "summary": "register user",
+                "parameters": [
+                    {
+                        "description": "character",
+                        "name": "character",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateCharacter"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "list of chats for current user",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Chat"
-                            }
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -148,25 +177,6 @@
                 }
             }
         },
-        "/logout": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Logout user",
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/register": {
             "post": {
                 "consumes": [
@@ -176,9 +186,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "Character"
                 ],
-                "summary": "register user",
+                "summary": "get all user characters",
                 "parameters": [
                     {
                         "description": "user",
@@ -192,245 +202,69 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
-                    }
-                }
-            }
-        },
-        "/user/{username}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "get user by username",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "username",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
+                        "description": "OK"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "models.AddChat": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "example": "Super Chat"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
+        "models.AddCharacter": {
+            "type": "object"
         },
         "models.AddUser": {
             "type": "object",
             "properties": {
-                "login": {
-                    "type": "string",
-                    "example": "User"
-                },
                 "name": {
-                    "type": "string",
-                    "example": "User"
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "example": "password"
-                },
-                "phone": {
-                    "type": "string",
-                    "example": "+78005553535"
-                }
-            }
-        },
-        "models.Chat": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string",
-                    "example": "1662070156"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "messages": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Message"
-                    }
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Super Chat"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "models.DeleteMessage": {
-            "type": "object",
-            "properties": {
-                "messageId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.EditMessage": {
-            "type": "object",
-            "properties": {
-                "messageId": {
-                    "type": "integer"
-                },
-                "text": {
                     "type": "string"
                 }
             }
         },
-        "models.GetMessages": {
+        "models.Character": {
             "type": "object",
             "properties": {
-                "limit": {
-                    "type": "integer"
+                "ability": {
+                    "type": "string"
                 },
-                "offset": {
-                    "type": "integer"
+                "damage": {
+                    "type": "number"
+                },
+                "maxHealth": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
         "models.Login": {
             "type": "object",
             "properties": {
+                "login": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
-        "models.Message": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "editedAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "responseId": {
-                    "type": "integer"
-                },
-                "text": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ReplyMessage": {
-            "type": "object",
-            "properties": {
-                "replyMessageId": {
-                    "type": "integer"
-                },
-                "text": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.SendMessage": {
-            "type": "object",
-            "properties": {
-                "text": {
-                    "type": "string"
-                }
-            }
+        "models.UpdateCharacter": {
+            "type": "object"
         },
         "models.User": {
             "type": "object",
             "properties": {
-                "bio": {
-                    "type": "string",
-                    "example": "What are you taking about?"
-                },
-                "createdAt": {
-                    "type": "string",
-                    "example": "1662070156"
-                },
-                "lastOnline": {
-                    "type": "string",
-                    "example": "1662070156"
+                "characters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Character"
+                    }
                 },
                 "name": {
-                    "type": "string",
-                    "example": "John"
-                },
-                "nickname": {
-                    "type": "string",
-                    "example": "Nickname"
-                },
-                "phone": {
-                    "type": "string",
-                    "example": "+78005553535"
-                }
-            }
-        },
-        "models.WsMessage": {
-            "type": "object",
-            "properties": {
-                "action": {
                     "type": "string"
-                },
-                "payload": {
-                    "type": "object",
-                    "properties": {
-                        "deleteMessage": {
-                            "$ref": "#/definitions/models.DeleteMessage"
-                        },
-                        "editMessage": {
-                            "$ref": "#/definitions/models.EditMessage"
-                        },
-                        "getMessages": {
-                            "$ref": "#/definitions/models.GetMessages"
-                        },
-                        "replyMessage": {
-                            "$ref": "#/definitions/models.ReplyMessage"
-                        },
-                        "sendMessage": {
-                            "$ref": "#/definitions/models.SendMessage"
-                        }
-                    }
                 }
             }
         }
